--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -1,3 +1,14 @@
 .sidebar.title{
 	color: var(--primary);
 }
+
+@media (min-width:401px){
+  .rs-drawer-left.rs-drawer-xs{
+    width: 55% !important;
+  }
+}
+@media (max-width:400px){
+  .rs-drawer-left.rs-drawer-xs{
+    width: 80% !important;
+  }
+}
