--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -3,7 +3,8 @@
 @import url('sidebar.css');
 @import url('title.css');
 @import url('table.css');
-
+@import url('toast.css');
+@import url('permissions.css');
 
 :root{
   --primary:#152e6e;
@@ -17,6 +18,7 @@ body{
 }
 
 .full-width{
+  width: 100%;
 	max-width: 100%;
 }
 .full-height{
