--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -2,6 +2,16 @@
 	color: var(--primary);
 }
 
+.rs-sidenav-item-icon{
+  font-size: 20px;
+  height: 16px;
+  left: 20px;
+  line-height: 1.25;
+  margin-right: 20px;
+  position: absolute;
+  top: 15px;
+}
+
 @media (min-width:401px){
   .rs-drawer-left.rs-drawer-xs{
     width: 55% !important;
