funcionalidad de listado y detalles de servicios

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -28,6 +28,12 @@ body{
 	height: 100vh;
 }
 
+.block{
+  display: block;
+}
+.inline-block{
+  display: inline-block;
+}
 .flex{
   display: flex;
 }
